# simple_planner

./: CMakeLists.txt  README.md  package.xml
config/: moveit_cpp_tutorial.rviz
launch/: moveit_cpp_simple_planner.launch.py  moveit_cpp_tutorial.launch copy.py  moveit_cpp_tutorial_standalone.launch.py  simple_planner.launch.py
src/: moveit_cpp_simple_planner.cpp  moveit_cpp_tutorial.cpp  simple_planner.cpp
